add missing keys to translations

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -63,21 +63,66 @@
       "treats": "مكافآت",
       "premiumSubscription": "اشتراك بريميوم",
       "{itemId}": "{itemId}",
-      "doghouse_1_pack": { "name": "حزمة 1 بيت كلاب", "description": "يمكنك وضع بيت كلاب إضافي واحد" },
-      "doghouse_3_pack": { "name": "حزمة 3 بيوت كلاب", "description": "يمكنك وضع 3 بيوت كلاب إضافية" },
-      "doghouse_6_pack": { "name": "حزمة 6 بيوت كلاب", "description": "يمكنك وضع 6 بيوت كلاب إضافية" },
-      "dog_rename": { "name": "رمز إعادة تسمية الكلب", "description": "اشترِ إعادة تسمية واحدة لكلبك" },
-      "doghouse_rename": { "name": "رمز إعادة تسمية بيت الكلب", "description": "اشترِ إعادة تسمية واحدة لبيت كلبك" },
-      "repair_50": { "name": "إصلاح 50", "description": "" },
-      "repair_max": { "name": "إصلاح كامل", "description": "" },
-      "energy_10_boost": { "name": "تعزيز طاقة 10", "description": "" },
-      "energy_50_boost": { "name": "تعزيز طاقة 50", "description": "" },
-      "small_treats": { "name": "حلويات صغيرة", "description": "100 مكافأة" },
-      "tasty_handful": { "name": "قبضة لذيذة", "description": "700 مكافأة" },
-      "snack_sack": { "name": "كيس وجبات خفيفة", "description": "1600 مكافأة" },
-      "mega_munch": { "name": "حقيبة قضمات عملاقة", "description": "3600 مكافأة" },
-      "ultimate_treat": { "name": "صندوق الحلويات النهائي", "description": "12500 مكافأة" },
-      "premium": { "name": "بريميوم", "description": "فتح الميزات المميزة" }
+      "doghouse_1_pack": {
+        "name": "حزمة 1 بيت كلاب",
+        "description": "يمكنك وضع بيت كلاب إضافي واحد"
+      },
+      "doghouse_3_pack": {
+        "name": "حزمة 3 بيوت كلاب",
+        "description": "يمكنك وضع 3 بيوت كلاب إضافية"
+      },
+      "doghouse_6_pack": {
+        "name": "حزمة 6 بيوت كلاب",
+        "description": "يمكنك وضع 6 بيوت كلاب إضافية"
+      },
+      "dog_rename": {
+        "name": "رمز إعادة تسمية الكلب",
+        "description": "اشترِ إعادة تسمية واحدة لكلبك"
+      },
+      "doghouse_rename": {
+        "name": "رمز إعادة تسمية بيت الكلب",
+        "description": "اشترِ إعادة تسمية واحدة لبيت كلبك"
+      },
+      "repair_50": {
+        "name": "إصلاح 50",
+        "description": ""
+      },
+      "repair_max": {
+        "name": "إصلاح كامل",
+        "description": ""
+      },
+      "energy_10_boost": {
+        "name": "تعزيز طاقة 10",
+        "description": ""
+      },
+      "energy_50_boost": {
+        "name": "تعزيز طاقة 50",
+        "description": ""
+      },
+      "small_treats": {
+        "name": "حلويات صغيرة",
+        "description": "100 مكافأة"
+      },
+      "tasty_handful": {
+        "name": "قبضة لذيذة",
+        "description": "700 مكافأة"
+      },
+      "snack_sack": {
+        "name": "كيس وجبات خفيفة",
+        "description": "1600 مكافأة"
+      },
+      "mega_munch": {
+        "name": "حقيبة قضمات عملاقة",
+        "description": "3600 مكافأة"
+      },
+      "ultimate_treat": {
+        "name": "صندوق الحلويات النهائي",
+        "description": "12500 مكافأة"
+      },
+      "premium": {
+        "name": "بريميوم",
+        "description": "فتح الميزات المميزة"
+      }
     }
   },
   "quests": {
@@ -128,7 +173,17 @@
       "REPAIR_DOGHOUSES": "إصلاح {target} بيت (بيوت) كلاب",
       "ATTACK_DOGHOUSES": "مهاجمة {target} بيت (بيوت) كلاب",
       "DESTROY_DOGHOUSES": "تدمير {target} بيت (بيوت) كلاب",
-      "LEVEL_UP": "الوصول إلى {target} مستوى (مستويات) جديد"
+      "LEVEL_UP": "الوصول إلى {target} مستوى (مستويات) جديد",
+      "BUILD_DOGHOUSES_one": "Build {target} doghouse",
+      "BUILD_DOGHOUSES_other": "Build {target} doghouses",
+      "REPAIR_DOGHOUSES_one": "Repair {target} doghouse",
+      "REPAIR_DOGHOUSES_other": "Repair {target} doghouses",
+      "ATTACK_DOGHOUSES_one": "Attack {target} doghouse",
+      "ATTACK_DOGHOUSES_other": "Attack {target} doghouses",
+      "DESTROY_DOGHOUSES_one": "Destroy {target} doghouse",
+      "DESTROY_DOGHOUSES_other": "Destroy {target} doghouses",
+      "LEVEL_UP_one": "Reach {target} new level",
+      "LEVEL_UP_other": "Reach {target} new levels"
     }
   },
   "rewards": {
@@ -139,7 +194,11 @@
       "DOG_RENAME": "رمز إعادة تسمية الكلب",
       "DOGHOUSE_RENAME": "رمز إعادة تسمية بيت الكلب",
       "DOGHOUSES": "{amount} بيت (بيوت) كلاب إضافي",
-      "ENERGY_RESTORE": "استعادة كاملة للطاقة"
+      "ENERGY_RESTORE": "استعادة كاملة للطاقة",
+      "TREATS_one": "{amount} Treat",
+      "TREATS_other": "{amount} Treats",
+      "DOGHOUSES_one": "{amount} Extra Doghouse",
+      "DOGHOUSES_other": "{amount} Extra Doghouses"
     }
   },
   "statsTab": "الإحصائيات",
