--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -63,21 +63,66 @@
       "treats": "Лакомства",
       "premiumSubscription": "Премиум-подписка",
       "{itemId}": "{itemId}",
-      "doghouse_1_pack": { "name": "Набор из 1 будки", "description": "Вы можете разместить 1 дополнительную будку" },
-      "doghouse_3_pack": { "name": "Набор из 3 будок", "description": "Вы можете разместить 3 дополнительные будки" },
-      "doghouse_6_pack": { "name": "Набор из 6 будок", "description": "Вы можете разместить 6 дополнительных будок" },
-      "dog_rename": { "name": "Токен переименования собаки", "description": "Купите одно переименование для вашей собаки" },
-      "doghouse_rename": { "name": "Токен переименования будки", "description": "Купите одно переименование для вашей будки" },
-      "repair_50": { "name": "Ремонт 50", "description": "" },
-      "repair_max": { "name": "Полный ремонт", "description": "" },
-      "energy_10_boost": { "name": "Буст энергии 10", "description": "" },
-      "energy_50_boost": { "name": "Буст энергии 50", "description": "" },
-      "small_treats": { "name": "Небольшие лакомства", "description": "100 лакомств" },
-      "tasty_handful": { "name": "Вкусная горсть", "description": "700 лакомств" },
-      "snack_sack": { "name": "Мешок снеков", "description": "1600 лакомств" },
-      "mega_munch": { "name": "Сумка мега-кусняшек", "description": "3600 лакомств" },
-      "ultimate_treat": { "name": "Ящик ультимативных лакомств", "description": "12500 лакомств" },
-      "premium": { "name": "Премиум", "description": "Разблокируйте премиум-функции" }
+      "doghouse_1_pack": {
+        "name": "Набор из 1 будки",
+        "description": "Вы можете разместить 1 дополнительную будку"
+      },
+      "doghouse_3_pack": {
+        "name": "Набор из 3 будок",
+        "description": "Вы можете разместить 3 дополнительные будки"
+      },
+      "doghouse_6_pack": {
+        "name": "Набор из 6 будок",
+        "description": "Вы можете разместить 6 дополнительных будок"
+      },
+      "dog_rename": {
+        "name": "Токен переименования собаки",
+        "description": "Купите одно переименование для вашей собаки"
+      },
+      "doghouse_rename": {
+        "name": "Токен переименования будки",
+        "description": "Купите одно переименование для вашей будки"
+      },
+      "repair_50": {
+        "name": "Ремонт 50",
+        "description": ""
+      },
+      "repair_max": {
+        "name": "Полный ремонт",
+        "description": ""
+      },
+      "energy_10_boost": {
+        "name": "Буст энергии 10",
+        "description": ""
+      },
+      "energy_50_boost": {
+        "name": "Буст энергии 50",
+        "description": ""
+      },
+      "small_treats": {
+        "name": "Небольшие лакомства",
+        "description": "100 лакомств"
+      },
+      "tasty_handful": {
+        "name": "Вкусная горсть",
+        "description": "700 лакомств"
+      },
+      "snack_sack": {
+        "name": "Мешок снеков",
+        "description": "1600 лакомств"
+      },
+      "mega_munch": {
+        "name": "Сумка мега-кусняшек",
+        "description": "3600 лакомств"
+      },
+      "ultimate_treat": {
+        "name": "Ящик ультимативных лакомств",
+        "description": "12500 лакомств"
+      },
+      "premium": {
+        "name": "Премиум",
+        "description": "Разблокируйте премиум-функции"
+      }
     }
   },
   "quests": {
@@ -128,7 +173,17 @@
       "REPAIR_DOGHOUSES": "Отремонтировать {target} собачью(и) будку(и)",
       "ATTACK_DOGHOUSES": "Атаковать {target} собачью(и) будку(и)",
       "DESTROY_DOGHOUSES": "Уничтожить {target} собачью(и) будку(и)",
-      "LEVEL_UP": "Достигнуть {target} нового(ых) уровня(ей)"
+      "LEVEL_UP": "Достигнуть {target} нового(ых) уровня(ей)",
+      "BUILD_DOGHOUSES_one": "Build {target} doghouse",
+      "BUILD_DOGHOUSES_other": "Build {target} doghouses",
+      "REPAIR_DOGHOUSES_one": "Repair {target} doghouse",
+      "REPAIR_DOGHOUSES_other": "Repair {target} doghouses",
+      "ATTACK_DOGHOUSES_one": "Attack {target} doghouse",
+      "ATTACK_DOGHOUSES_other": "Attack {target} doghouses",
+      "DESTROY_DOGHOUSES_one": "Destroy {target} doghouse",
+      "DESTROY_DOGHOUSES_other": "Destroy {target} doghouses",
+      "LEVEL_UP_one": "Reach {target} new level",
+      "LEVEL_UP_other": "Reach {target} new levels"
     }
   },
   "rewards": {
@@ -139,7 +194,11 @@
       "DOG_RENAME": "Жетон переименования собаки",
       "DOGHOUSE_RENAME": "Жетон переименования собачьей будки",
       "DOGHOUSES": "{amount} дополнительная(ые) собачья(и) будка(и)",
-      "ENERGY_RESTORE": "Полное восстановление энергии"
+      "ENERGY_RESTORE": "Полное восстановление энергии",
+      "TREATS_one": "{amount} Treat",
+      "TREATS_other": "{amount} Treats",
+      "DOGHOUSES_one": "{amount} Extra Doghouse",
+      "DOGHOUSES_other": "{amount} Extra Doghouses"
     }
   },
   "statsTab": "Статистика",
