--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -63,21 +63,66 @@
       "treats": "零食",
       "premiumSubscription": "高级订阅",
       "{itemId}": "{itemId}",
-      "doghouse_1_pack": { "name": "1 个狗屋包", "description": "您可以额外放置 1 个狗屋" },
-      "doghouse_3_pack": { "name": "3 个狗屋包", "description": "您可以额外放置 3 个狗屋" },
-      "doghouse_6_pack": { "name": "6 个狗屋包", "description": "您可以额外放置 6 个狗屋" },
-      "dog_rename": { "name": "狗改名令牌", "description": "为您的爱犬购买一次改名" },
-      "doghouse_rename": { "name": "狗屋改名令牌", "description": "为您的狗屋购买一次改名" },
-      "repair_50": { "name": "修复 50", "description": "" },
-      "repair_max": { "name": "完全修复", "description": "" },
-      "energy_10_boost": { "name": "能量提升 10", "description": "" },
-      "energy_50_boost": { "name": "能量提升 50", "description": "" },
-      "small_treats": { "name": "小份零食", "description": "100 个零食" },
-      "tasty_handful": { "name": "美味一把", "description": "700 个零食" },
-      "snack_sack": { "name": "零食袋", "description": "1600 个零食" },
-      "mega_munch": { "name": "超大零食袋", "description": "3600 个零食" },
-      "ultimate_treat": { "name": "终极零食箱", "description": "12500 个零食" },
-      "premium": { "name": "高级", "description": "解锁高级功能" }
+      "doghouse_1_pack": {
+        "name": "1 个狗屋包",
+        "description": "您可以额外放置 1 个狗屋"
+      },
+      "doghouse_3_pack": {
+        "name": "3 个狗屋包",
+        "description": "您可以额外放置 3 个狗屋"
+      },
+      "doghouse_6_pack": {
+        "name": "6 个狗屋包",
+        "description": "您可以额外放置 6 个狗屋"
+      },
+      "dog_rename": {
+        "name": "狗改名令牌",
+        "description": "为您的爱犬购买一次改名"
+      },
+      "doghouse_rename": {
+        "name": "狗屋改名令牌",
+        "description": "为您的狗屋购买一次改名"
+      },
+      "repair_50": {
+        "name": "修复 50",
+        "description": ""
+      },
+      "repair_max": {
+        "name": "完全修复",
+        "description": ""
+      },
+      "energy_10_boost": {
+        "name": "能量提升 10",
+        "description": ""
+      },
+      "energy_50_boost": {
+        "name": "能量提升 50",
+        "description": ""
+      },
+      "small_treats": {
+        "name": "小份零食",
+        "description": "100 个零食"
+      },
+      "tasty_handful": {
+        "name": "美味一把",
+        "description": "700 个零食"
+      },
+      "snack_sack": {
+        "name": "零食袋",
+        "description": "1600 个零食"
+      },
+      "mega_munch": {
+        "name": "超大零食袋",
+        "description": "3600 个零食"
+      },
+      "ultimate_treat": {
+        "name": "终极零食箱",
+        "description": "12500 个零食"
+      },
+      "premium": {
+        "name": "高级",
+        "description": "解锁高级功能"
+      }
     }
   },
   "quests": {
@@ -128,7 +173,17 @@
       "REPAIR_DOGHOUSES": "修理{target}个狗屋",
       "ATTACK_DOGHOUSES": "攻击{target}个狗屋",
       "DESTROY_DOGHOUSES": "摧毁{target}个狗屋",
-      "LEVEL_UP": "达到{target}个新等级"
+      "LEVEL_UP": "达到{target}个新等级",
+      "BUILD_DOGHOUSES_one": "Build {target} doghouse",
+      "BUILD_DOGHOUSES_other": "Build {target} doghouses",
+      "REPAIR_DOGHOUSES_one": "Repair {target} doghouse",
+      "REPAIR_DOGHOUSES_other": "Repair {target} doghouses",
+      "ATTACK_DOGHOUSES_one": "Attack {target} doghouse",
+      "ATTACK_DOGHOUSES_other": "Attack {target} doghouses",
+      "DESTROY_DOGHOUSES_one": "Destroy {target} doghouse",
+      "DESTROY_DOGHOUSES_other": "Destroy {target} doghouses",
+      "LEVEL_UP_one": "Reach {target} new level",
+      "LEVEL_UP_other": "Reach {target} new levels"
     }
   },
   "rewards": {
@@ -139,7 +194,11 @@
       "DOG_RENAME": "狗重命名令牌",
       "DOGHOUSE_RENAME": "狗屋重命名令牌",
       "DOGHOUSES": "{amount}个额外的狗屋",
-      "ENERGY_RESTORE": "完全恢复能量"
+      "ENERGY_RESTORE": "完全恢复能量",
+      "TREATS_one": "{amount} Treat",
+      "TREATS_other": "{amount} Treats",
+      "DOGHOUSES_one": "{amount} Extra Doghouse",
+      "DOGHOUSES_other": "{amount} Extra Doghouses"
     }
   },
   "statsTab": "统计",
